--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stomp/stompjs": "^6.1.2",
     "core-js": "^3.8.3",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
